--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -19,10 +19,12 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (Tip: you can change your vote)
+          (Tip: you can change your vote again)
         </div>
         <div id="hostname">
           Processed by container ID {{hostname}}
+        </div>
+        <div>
           Developed by Diyar United Company
         </div>
       </div>
